--- a/Semester-3/Языки программирования/Курс на Stepik/3 Структура кода/3.1.md
+++ b/Semester-3/Языки программирования/Курс на Stepik/3 Структура кода/3.1.md
@@ -1,1 +1,595 @@
-dkss
+# 3.1 Декларативность. Стёк 1.0
+## _2/16 Стёк 1.0_
+
+Программы на языке Стёк 1.0 выполняются последовательно. Они состоят из команд двух видов: одни команды не имеют аргументов, другие имеют один аргумент.
+
+Команды работают со стеком чисел. Вот некоторые команды:
+- `PUSH <число>` кладёт число в стек.
+- `IADD` вынимает из стека два числа, кладёт в стек результат их сложения.
+- `IMUL` вынимает из стека два числа, кладёт в стек результат их умножения.
+- `IPRINT` вынимает из стека одно число, выводит его на экран.
+- `IREAD` считывает число и кладёт его на стек.
+- `DUP` вынимает из стека одно число и кладёт его на вершину дважды.
+- `STOP` останавливает программу.
+
+Стек мы изображаем в скобках; в квадратных скобках мы даём описание одного элемента стека, полученного с помощью вычислений. Чтобы описать изменение стека мы будем писать так:
+```
+( верхние значения стека до изменения - верхние значения стека после изменения )
+```
+Например, для команды `IADD`: `( a b - [a+b] )`. Здесь `a` и `b` это имена для верхних значений в стеке, которые мы вводим для удобства.  В стеке, конечно, могут лежать и другие значения глубже `( a b )`, но они не участвуют в вычислениях.
+
+А какое число будет лежать в стеке  после выполнения этой программы?
+
+```
+PUSH 10
+PUSH 30
+PUSH 2
+IADD
+IADD
+STOP
+```
+
+### ___Ответ:___
+
+```
+42
+```
+
+---
+
+## _3/16 Список команд Стёка_
+
+Вот полный список команд языка Стёк 1.0 и стековые диаграммы для них
+- Манипуляции со стеком
+    - `PUSH n  ( - n )` кладёт число в стек.
+    - `POP (a - )` вынимает из стека одно число, ничего с ним не делает.
+    - `SWAP (a b - b a )`
+    - `DUP (a - a a )` вынимает из стека одно число и кладёт его на вершину дважды.
+- Арифметика:
+    - `IADD (a b - [a + b] )`
+    - `ISUB (a b - [a - b] )` (обратите внимание на порядок операндов! Сначала кладем в стек то, из чего вычитаем)
+    - `IMUL(a b - [a * b] )`
+    - `IDIV (a b - [a / b] )`
+    - `IMOD (a b - [a % b] )`
+    - `INEG (a - [ -a ] )`
+- Чтение и запись
+    - `IPRINT (a - )` вынимает из стека одно число, выводит его на экран.
+    - `IREAD ( - a )` считывает число и кладёт его на стек.
+- `ICMP (a b - [ if (a < b) then -1; else if (a > b) then 1; else 0 ] )`
+- `STOP` 
+
+Мы реализуем интерпретатор этого языка, и напишем его декларативно, красиво и расширяемо. На протяжении этого и следующих уроков мы постепенно будем подбираться к созданию небольшой стековой виртуальной машины наподобие игрушечной JVM.
+
+Напишите числа, которые лежат в стеке после выполнения следующей программы.
+```
+IREAD
+PUSH 10
+ISUB
+PUSH 2
+DUP
+IDIV
+```
+Пользователь вводит число 90. Как и в стековых диаграммах, крайнее правое число - вершина стека, а первое число слева лежит в стеке глубже всех.
+
+Подсказка: чисел будет два.
+
+### ___Ответ:___
+
+```
+80 1
+```
+
+---
+
+## _5/16 Как закодировать программу на Стёке внутри программы на C?_
+
+Чтобы начать разрабатывать интерпретатор Стёка нам не потребуется разбирать текстовые файлы и вычленять оттуда команды языка, вроде `PUSH 42` или `DUP`. Закодируем программу как массив `union ins`; это позволит нам прописать программу на Стёке __прямо внутри программы на C__. Можно сказать, что язык Стёк мы _встроим_ внутрь языка C: мы будем выражать программу на Стёке используя языковые конструкции C. Встраивание языков друг в друга и предметно-ориентированные языки часто сопровождают декларативный стиль программирования.
+
+Вот как выглядит программа на Стёке внутри кода на C.
+- объединения, соответствующие командам без аргументов, инициализируются тривиально, через фигурные скобки;
+- объединения, соответствующие команде `push` с одним аргументом, инициализируется через поле `as_arg64`.
+```c
+/* Код с прошлого шага: */
+enum opcode {
+  BC_PUSH, BC_POP, BC_SWAP, BC_DUP,
+  BC_IADD, BC_ISUB, BC_IMUL, BC_IDIV,
+  BC_INEG,
+  BC_IPRINT, BC_IREAD,
+  BC_ICMP,
+  BC_STOP
+};
+
+
+struct bc_noarg { enum opcode opcode; };
+struct bc_arg64 { enum opcode opcode; int64_t arg; };
+
+union ins {
+  enum opcode opcode;
+  struct bc_arg64 as_arg64;
+  struct bc_noarg as_noarg;
+};
+
+/* Программа: */
+const union ins program[] = {
+  { BC_IREAD },
+  { BC_IREAD },
+  { BC_DUP },
+  { .as_arg64 = { BC_PUSH, .arg = 10 } },
+  { BC_IMUL },
+  { BC_IADD },
+  { BC_IADD },
+  { BC_IPRINT },
+  { BC_STOP }
+};
+```
+Это не так привычно, как писать команды в текстовом файле, но зато мы можем писать программы на Стёке уже сейчас, ещё не разработав для него парсер -- часть интерпретатора, которая разбирает исходный текст на части и понимает, какие языковые конструкции там фигурируют.
+
+Закодируйте таким образом следующую программу:
+```
+IREAD
+PUSH 10
+ISUB
+PUSH 2
+IDIV
+IPRINT
+STOP
+```
+### ___Ответ:___
+
+```c
+const union ins program[] = {
+  { BC_IREAD },
+  { .as_arg64 = { BC_PUSH, .arg = 10 } },
+  { BC_ISUB },
+  { .as_arg64 = { BC_PUSH, .arg = 2 } },
+  { BC_IDIV },
+  { BC_IPRINT },
+  { BC_STOP }
+};
+```
+
+---
+
+## _8/16_
+
+Чему равен `x` после выполнения кода:
+```c
+int64_t i = 3;
+int64_t x = 0;
+switch (i) {
+  case 0:  { x = x + 10; };
+  case 1:  { x = x + 10; };
+  case 2:  { x = x + 10; };
+  case 4:  { x = x + 10; };
+  case 5:  { x = x + 10; };
+  default: { x = x + 1; };
+}
+```
+### ___Ответ:___
+
+```
+1
+```
+
+---
+
+## _9/16_
+
+Чему равен `x` после выполнения кода:
+```c
+int64_t i = 4;
+int64_t x = 0;
+switch (i) {
+  case 0:  { x = x + 1; };
+  case 1:  { x = x + 1; };
+  case 2:  { x = x + 1; };
+  case 4:  { x = x + 1; };
+  case 5:  { x = x + 1; };
+  default: { x = x + 1; };
+}
+```
+### ___Ответ:___
+
+```
+3
+```
+
+---
+
+## _10/16_
+
+Теперь напишем первую версию интерпретатора. Начнём с инструкций: `IREAD`, `IPRINT`, `IADD`, `PUSH` и `STOP`.
+
+У любого языка есть абстрактный вычислитель, и Стёк не исключение. Состояние его абстрактного вычислителя включает в себя:
+- программу;
+- счётчик команд - указатель на следующую инструкцию, которая будет выполнена;
+- стек чисел.
+```c
+struct vm_state {
+  const union ins *ip;
+  struct stack data_stack;
+};
+```
+Мы инициализируем эту структуру и запускаем цикл интерпретации. На каждой итерации происходит следующее:
+- выбор команды по адресу из счётчика команд `ip`;
+- увеличение счётчика команд `ip` на размер команды,
+- выполнение выбранной команды.
+
+Реализуйте интерпретатор для нескольких инструкций языка с помощью `switch`.  В тестах интерпретируется программа, считывающая число и прибавляющая к нему 10, а затем выводящая результат в поток вывода.
+
+### ___Ответ:___
+
+```c
+/* Описание инструкций (см. предыдущий шаг) */
+enum opcode { BC_PUSH, BC_IPRINT, BC_IREAD, BC_IADD, BC_STOP };
+
+struct bc_noarg {
+  enum opcode opcode;
+};
+struct bc_arg64 {
+  enum opcode opcode;
+  int64_t arg;
+};
+union ins {
+  enum opcode opcode;
+  struct bc_arg64 as_arg64;
+  struct bc_noarg as_noarg;
+};
+
+/* ------------------------ */
+
+struct vm_state {
+  const union ins *ip;
+  struct stack data_stack;
+};
+
+/* Начальная вместимость стека задаётся определением STACK_CAPACITY */
+struct vm_state state_create(const union ins *ip) {
+  return (struct vm_state){.ip = ip,
+                           .data_stack = stack_create(STACK_CAPACITY)};
+}
+
+// Как правильно деинициализировать состояние, освободить все ресурсы?
+void state_destroy(struct vm_state *state) {
+    stack_destroy(&state->data_stack);
+}
+
+
+
+/* Вы можете использовать эти функции: */
+void print_int64(int64_t);
+struct maybe_int64 maybe_read_int64();
+
+struct stack stack_create(size_t size);
+void stack_destroy(struct stack *s);
+bool stack_push(struct stack *s, int64_t value);
+struct maybe_int64 stack_pop(struct stack *s);
+
+/* Опишите цикл интерпретации с выборкой и выполнением команд (пока не выполним STOP) */
+void interpret(struct vm_state *state) {
+  while (1) {
+    const union ins current_instruction = *(state->ip);
+    state->ip++;
+
+    switch (current_instruction.opcode) {
+      case BC_PUSH: {
+        const int64_t value = current_instruction.as_arg64.arg;
+        stack_push(&state->data_stack, value);
+        break;
+      }
+      case BC_IPRINT: {
+        const struct maybe_int64 maybe_value = stack_pop(&state->data_stack);
+        if (maybe_value.valid) {
+          print_int64(maybe_value.value);
+        }
+        break;
+      }
+      case BC_IREAD: {
+        const struct maybe_int64 maybe_input = maybe_read_int64();
+        if (maybe_input.valid) {
+          stack_push(&state->data_stack, maybe_input.value);
+        }
+        break;
+      }
+      case BC_IADD: {
+        const struct maybe_int64 maybe_value2 = stack_pop(&state->data_stack);
+        const struct maybe_int64 maybe_value1 = stack_pop(&state->data_stack);
+        if (maybe_value1.valid && maybe_value2.valid) {
+          stack_push(&state->data_stack, maybe_value1.value + maybe_value2.value);
+        }
+        break;
+      }
+      case BC_STOP: {
+        return;
+      }
+    }
+  }
+}
+
+
+void interpret_program(const union ins *program) {
+  struct vm_state state = state_create(program);
+  interpret(&state);
+  state_destroy(&state);
+}
+```
+
+---
+
+## _13/16 Интерпретатор декларативно_
+
+Напомним, что сейчас интерпретатор выглядит вот так:
+
+```c
+void interpret(struct vm_state *state) {
+  for (;;) {
+    switch (state->ip->opcode) {
+    case BC_PUSH: {
+      ...
+      break;
+    }
+    case BC_IREAD: {
+      ... 
+      break;
+    }
+    case BC_IADD: {
+      ...
+      break;
+    }
+    case BC_IPRINT: {
+      ...
+      break;
+    }
+    case BC_STOP: return;
+    default:
+      err("Not implemented");
+      return;
+    }
+    state->ip = state->ip + 1;
+  }
+}
+```
+
+Наша задача - модифицировать его так, чтобы можно было добавлять инструкции не переписывая  функцию `interpret`. Оказывается, это достаточно легко сделать.
+
+Любая инструкция совершает действие над состоянием. Также все типы инструкций имеют свои номера, в соответствии с перечислением `enum opcode`.  Заведём массив указателей на функции, реализующие инструкции; указатель на реализацию инструкции с номером _n_ будет лежать в массиве по индексу _n_.
+
+__Sample Input:__
+
+90
+
+__Sample Output:__
+
+100
+
+### ___Ответ:___
+
+```c
+/* Вам доступны:
+
+
+struct maybe_int64 {
+    int64_t value; 
+    bool valid; 
+};
+
+struct maybe_int64 some_int64(int64_t i);
+
+extern const struct maybe_int64 none_int64;
+
+void maybe_int64_print( struct maybe_int64 i );
+struct maybe_int64 maybe_read_int64();
+void print_int64(int64_t i)
+*/
+
+void interpret_push(struct vm_state* state) {
+    stack_push(&state->data_stack, state->ip->as_arg64.arg);
+}
+
+void interpret_iread(struct vm_state* state) {
+    const struct maybe_int64 maybe_input = maybe_read_int64();
+    if (maybe_input.valid) {
+        stack_push(&state->data_stack, maybe_input.value);
+    }
+}
+
+void interpret_iadd(struct vm_state* state) {
+    const struct maybe_int64 maybe_value2 = stack_pop(&state->data_stack);
+    const struct maybe_int64 maybe_value1 = stack_pop(&state->data_stack);
+    if (maybe_value1.valid && maybe_value2.valid) {
+        stack_push(&state->data_stack, maybe_value1.value + maybe_value2.value);
+    }
+}
+
+void interpret_iprint(struct vm_state* state) {
+    const struct maybe_int64 maybe_value = stack_pop(&state->data_stack);
+    print_int64(maybe_value.value);
+}
+
+void interpret_stop(struct vm_state* state) {
+    state->ip = NULL;
+}
+
+typedef void (*interpreter)(struct vm_state*);
+
+interpreter interpreters[] = {
+    [BC_PUSH] = interpret_push,
+    [BC_IREAD] = interpret_iread,
+    [BC_IADD] = interpret_iadd,
+    [BC_IPRINT] = interpret_iprint,
+    [BC_STOP] = interpret_stop,
+};
+
+void interpret(struct vm_state* state) {
+    while (state->ip != NULL) {
+        interpreters[state->ip->opcode](state);
+        if (state->ip != NULL) {
+            state->ip++;
+        }    
+    }
+}
+```
+
+---
+
+## _14/16 Больше инструкций_
+
+В Стёке есть несколько бинарных операций (`IADD`, `IDIV`, `ICMP`...). Эти операции __забирают два аргумента из стека__, применяют к ним операцию и __кладут результат обратно__.
+
+В этом описании жирным выделена общая для всех бинарных операций часть. А если есть общая схема, значит, можно её вычленить в отдельную функцию, избежав дублирования кода:
+```c
+void lift_binop( struct stack* s, int64_t (f)(int64_t, int64_t))
+```
+Эта функция принимает указатель на функцию `f`, которая и совершает полезные действия с двумя числами, например, возвращает их сумму. Функция `lift_binop` забирает со стека аргументы, передаёт их в `f` и кладёт в стек результат.
+
+Имея `lift_binop`, бинарные операции будут выражаться вот так:
+```c
+int64_t i64_add(int64_t a, int64_t b) { return a + b; }
+
+void interpret_iadd( struct vm_state* state ) {
+  lift_binop(&state->data_stack, i64_add);
+}
+```
+Аналогичным образом `NEG` выражается с помощью функции `lift_unop` со следующей сигнатурой:
+```c
+void lift_unop( struct stack* s, int64_t (f)(int64_t));
+```
+Реализуйте эти две функции, а также остальные необходимые инструкции.
+
+### ___Ответ:___
+
+```c
+/* Вам уже доступны функции: */
+bool stack_push( struct stack* s, int64_t value );
+struct maybe_int64 stack_pop( struct stack* s );
+
+/*
+  struct maybe_int64 {
+  int64_t value;
+  bool valid;
+  };
+*/
+struct maybe_int64 some_int64(int64_t i);
+/*  const struct maybe_int64 none_int64; */
+
+
+
+/*  Интерпретаторы команд */
+void interpret_swap(struct vm_state* state) {
+    struct maybe_int64 maybe_value2 = stack_pop(&state->data_stack);
+    struct maybe_int64 maybe_value1 = stack_pop(&state->data_stack);
+    if (maybe_value1.valid && maybe_value2.valid) {
+        stack_push(&state->data_stack, maybe_value2.value);
+        stack_push(&state->data_stack, maybe_value1.value);
+    }
+}
+
+void interpret_pop(struct vm_state* state) {
+    stack_pop(&state->data_stack);
+}
+
+void interpret_dup(struct vm_state* state) {
+    struct maybe_int64 maybe_value = stack_pop(&state->data_stack);
+    if (maybe_value.valid) {
+        stack_push(&state->data_stack, maybe_value.value);
+        stack_push(&state->data_stack, maybe_value.value);
+    }
+}
+
+void lift_unop(struct stack* s, int64_t (*f)(int64_t)) {
+    struct maybe_int64 maybe_value = stack_pop(s);
+    if (maybe_value.valid) {
+        stack_push(s, f(maybe_value.value));
+    }
+}
+
+void lift_binop(struct stack* s, int64_t (*f)(int64_t, int64_t)) {
+    struct maybe_int64 maybe_value2 = stack_pop(s);
+    struct maybe_int64 maybe_value1 = stack_pop(s);
+    if (maybe_value1.valid && maybe_value2.valid) {
+        stack_push(s, f(maybe_value1.value, maybe_value2.value));
+    }
+}
+
+
+int64_t i64_add(int64_t a, int64_t b) { return a + b; }
+int64_t i64_sub(int64_t a, int64_t b) { return a - b; }
+int64_t i64_mul(int64_t a, int64_t b) { return a * b; }
+int64_t i64_div(int64_t a, int64_t b) { return a / b; }
+int64_t i64_cmp(int64_t a, int64_t b) { if (a > b) return 1; else if (a < b) return -1; return 0; }
+
+int64_t i64_neg(int64_t a) { return -a; }
+
+void interpret_iadd( struct vm_state* state ) { lift_binop(& state->data_stack, i64_add); }
+void interpret_isub( struct vm_state* state ) { lift_binop(& state->data_stack, i64_sub); }
+void interpret_imul( struct vm_state* state ) { lift_binop(& state->data_stack, i64_mul); }
+void interpret_idiv( struct vm_state* state ) { lift_binop(& state->data_stack, i64_div); }
+void interpret_icmp( struct vm_state* state ) { lift_binop(& state->data_stack, i64_cmp); }
+
+void interpret_ineg( struct vm_state* state ) { lift_unop (& state->data_stack, i64_neg);  }
+```
+
+---
+
+## _16/16 Проверки состояния стека_
+
+Добавим надёжности в наш интерпретатор. Бывают ситуации, когда в стеке недостаточно элементов, чтобы осуществить операцию, например, когда в стеке одно число, а мы выполняем инструкцию `IADD`. Мы бы хотели отлавливать такие ситуации, останавливать программу и выводить сообщение об ошибке. Для этого добавим два поля в описание инструкций:
+
+```c
+enum ins_arg_type { IAT_NOARG, IAT_I64 };
+
+struct ins_descr {
+  const char*       mnemonic;     // мнемоника
+  enum ins_arg_type argtype;      // тип аргументов: 0, 1 численных аргументов
+  bool              affects_ip;   // изменяет ли инструкция IP?
+
+// Новые поля:
+  size_t            stack_min;    // минимальное количество элементов для инструкции
+  int64_t           stack_delta;  // сколько требуется аргументов в стеке
+};
+```
+
+Мы используем эти поля следующим образом:
+- `stack_delta` чтобы обнаружить ситуации, когда стек переполняется. Например, в стеке столько элементов, сколько он только может вместить, и мы выполняем `PUSH`.
+- `stack_min` чтобы обнаружить ситуации, когда в стеке недостаточно элементов. Например, в стеке один элемент, мы выполняем `IADD`.
+
+Допишите интерпретатор так, чтобы при недостатке или избытке элементов в стеке выводилось сообщение об ошибке и программа завершалась. Если в стеке слишком мало элементов для совершения операции, выведите "Stack underflow\n", если слишком много -- "Stack overflow\n".
+
+Для тестирования мы настроили интерпретатор так, чтобы стек вмещал не более пяти элементов.
+
+__Sample Input:__
+
+push 10 push 10 push 10 push 10 push 10 push 10
+
+__Sample Output:__
+
+Stack overflow
+
+### ___Ответ:___
+
+```c
+void interpret(struct vm_state* state, ins_interpreter * const (actions)[]) {
+    for (; state->ip;) {
+        const union ins* ins = state->ip;
+
+        const struct ins_descr* ins_descr = instructions + ins->opcode;
+
+        if (state->data_stack.count < ins_descr->stack_min) {
+            printf("Stack underflow\n");
+            break;
+        }
+
+        if (ins_descr->stack_delta + state->data_stack.count > state->data_stack.data.size) {
+            printf("Stack overflow\n");
+            break;
+        }
+
+
+        actions[ins->opcode](state);
+
+        if (!ins_descr->affects_ip) {
+            state->ip = state->ip + 1;
+        }
+    }
+}
+```
